--- a/src/components/land.css
+++ b/src/components/land.css
@@ -5,28 +5,86 @@
     text-decoration: none;
     list-style-type: none;
 }
-#hero {
-    width: 100%;
-    height: 80vh;
-    background: url("/public/educational-theme-close-up-student-writing-classroom-min.jpg") top center;
-    background-size: cover;
-    position: relative;
+:root {
+    --white: #FFF;
+    --black: #000;
+    --dark: #1E1E1E;
+    --gray: rgba(1, 1, 1, 0.6);
+    --lite: rgba(255, 255, 255, 0.6);
+    --primary: #002347;
+    --secondary: #fdc632;
 }
 
-#hero:before {
+
+/***************************
+            DEFAULT
+****************************/
+body {
+    margin: 0;
+    overflow-x: hidden !important;
+    font-family: 'Poppins', sans-serif;
+}
+
+a {
+    text-decoration: none !important;
+    min-width: fit-content;
+    width: fit-content;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    color: #fff;
+}
+
+a,
+button {
+    transition: 0.5s;
+}
+
+a,
+p {
+    font-size: 14px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: var(--primary);
+    font-weight: 600;
+}
+
+a,
+button,
+input,
+textarea,
+select {
+    outline: none !important;
+}
+#hero {
+    width: 100%;
+    height: 100vh;
+    background: url("/public/educational-theme-close-up-student-writing-classroom-min.jpg") top center;
+    background-size: 100%;
+    position: fixed;
+    z-index: -99999;
+}
+
+/* #hero .container {
+    position: relative;
+    padding-top: 72px;
+} */
+.overlay {
     content: "";
-    /* background: rgba(0, 0, 0, 0.2); */
+    background: rgba(0, 0, 0, 0.2);
     position: absolute;
     bottom: 0;
     top: 0;
     left: 0;
     right: 0;
-    /* z-index: -1; */
+    z-index: -1;
 }
 
-#hero .container {
-    padding-top: 72px;
-}
 
 .get-started-btn {
     margin-left: 22px;
@@ -42,7 +100,8 @@
 }
 
 .get-started-btn:hover {
-    background: #8759d0;;
+    background: #8759d0;
+    ;
     color: #fff;
 }
 
@@ -53,23 +112,17 @@
     position: relative;
     overflow-x: hidden;
     overflow-y: hidden;
-}
-
-.home img {
-    position: absolute;
-    width: 100%;
-    object-fit: cover;
-    filter: brightness(70%);
-    z-index: -1;
+    background-size: 100%;
 }
 
 .home>.container {
     height: 100%;
-    /* position: absolute; */
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
+    padding: 50px;
     color: #fff;
 }
 
@@ -129,30 +182,65 @@
 
 
 
+.about {
+    background-color: #e7e5e5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 
+
+.img2 {
+    height: 40%;
+    width: 90%;
+    /* object-fit: cover; */
+}
+
+
+.content {
+    /* background-color: #8759d0; */
+    width: 50%;
+    justify-content: left;
+}
+
+.img2_container {
+    /* display: inline-block; */
+    width: 50%;
+}
 
 .about .content h3 {
+    text-align: justify;
     font-weight: 600;
     font-size: 26px;
-  }
-  
-  .about .content ul {
+}
+
+.about .content ul {
+    text-align: justify;
     list-style: none;
     padding: 0;
-  }
-  
-  .about .content ul li {
+}
+
+.about .content ul li {
     padding-bottom: 10px;
-  }
-  
-  .about .content ul i {
+}
+
+.about .content ul i {
     font-size: 20px;
     padding-right: 4px;
     color: #5fcf80;
-  }
-  
-  .about .content .learn-more-btn {
+}
+
+.about .content .learn-more-btn {
     background: #5fcf80;
     color: #fff;
     border-radius: 50px;
@@ -161,77 +249,30 @@
     transition: 0.3s;
     font-size: 14px;
     display: inline-block;
-  }
-  
-  .about .content .learn-more-btn:hover {
+}
+
+.about .content .learn-more-btn:hover {
     background: #3ac162;
     color: #fff;
-  }
+}
+
+@media (max-width: 768px) {
+    .about .content .learn-more-btn {
+        margin: 0 48px 0 0;
+        padding: 6px 18px;
+    }
+}
+
 
 
 
 #footer {
-    height: 100vh;
+    /* height: 100vh;    */
     display: flex;
     align-items: end;
     justify-content: end;
 }
 
-:root {
-    --white: #FFF;
-    --black: #000;
-    --dark: #1E1E1E;
-    --gray: rgba(1, 1, 1, 0.6);
-    --lite: rgba(255, 255, 255, 0.6);
-    --primary: #002347;
-    --secondary: #fdc632;
-}
-
-
-/***************************
-            DEFAULT
-****************************/
-body {
-    margin: 0;
-    overflow-x: hidden !important;
-    font-family: 'Poppins', sans-serif;
-}
-
-a {
-    text-decoration: none !important;
-    min-width: fit-content;
-    width: fit-content;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-}
-
-a,
-button {
-    transition: 0.5s;
-}
-
-a,
-p {
-    font-size: 14px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: var(--primary);
-    font-weight: 600;
-}
-
-a,
-button,
-input,
-textarea,
-select {
-    outline: none !important;
-}
 
 fieldset {
     border: 0;
@@ -326,8 +367,16 @@ fieldset {
 /***************************
                FOOTER
 ****************************/
+.footer_content{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
 footer {
-    background-color: var(--primary);
+    background-color: rgb(130, 139, 187);
     color: var(--lite);
 }
 
@@ -337,8 +386,8 @@ footer h3 {
 }
 
 footer a {
-    color: var(--lite);
-    display: block;
+    color: var(--white);
+    /* display: block; */
     margin: 15px 0;
 }
 
