--- a/styles/index.css
+++ b/styles/index.css
@@ -59,8 +59,9 @@ select {
     width: 100%;
     height: 80vh;
     background: url("/educational-theme-close-up-student-writing-classroom-min.jpg") top center;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
+    background-position: top;
     position: fixed;
     z-index: -99999;
 }
@@ -91,7 +92,6 @@ select {
 }
 
 .home>.container2 {
-    /* height: 90%; */
     width: 70%;
     display: flex;
     flex-direction: column;
@@ -160,7 +160,6 @@ select {
     display: flex;
     flex-direction: column;
     justify-content: top;
-    height: 70vh;
     width: 100%;
     background-color: #e0e0e0;
 }
@@ -177,7 +176,7 @@ select {
 
 .img2 {
     height: 40%;
-    width: 90%;
+    width: 100%;
 }
 
 
@@ -185,8 +184,9 @@ select {
     width: 50%;
 }
 
-.img2_container {
-    width: 40%;
+.mg2_container {
+    width: 45%;
+    margin: 10px;
 }
 
 .container_about {
@@ -247,12 +247,14 @@ select {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #440909;
+    background-color: #FFF;
 }
 
 .whyus_container{
-    height: 45px;
-    background-color: #5fcf80;
+    margin: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -305,6 +307,8 @@ select {
 .margin {
     margin-top: 5%;
 }
+
+
 @media (max-width: 975px) {
     #hero {
         /* height: 00vh; */
@@ -314,14 +318,15 @@ select {
         height: 100vh;
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: 200%;
+        background-size: 245%;
         overflow: hidden;
     }
 
     .row{
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
+        /* flex-direction: column; */
         background-color: rgb(250, 242, 232);
         width: 100%;
         height: 100%;
@@ -332,11 +337,13 @@ select {
         width: auto;
         padding: 10% 5% 10% 5%;
     }
-
-    .home {
-        height: 60vh;
+    .mg2_container {
+        width: 80%;
+        margin: 10px;
     }
-
+    .home {
+        height: 70vh;
+    }
     .home>.container2 h1 {
         font-size: 30px;
         letter-spacing: 2px;
@@ -346,7 +353,7 @@ select {
     .home>.container2 {
         padding: 0;
         display: flex;
-        height: 60vh;
+        margin-top: 10%;
     }
 
     .home>.container2 button>span.bg {
@@ -375,4 +382,32 @@ select {
     .home>.container2 button.bottom:hover>.bg {
         transform: translateY(100%);
     }
+
+    .about .content_home h3 {
+        font-size: 20px;
+        padding-bottom: 5px;
+    }
+    .about .content_home ul li {
+        font-size: 15px;
+        /* color: #5fcf80; */
+    }
 }
+
+@media (max-width: 400px) 
+{
+    .home>.container2{
+        margin-top: 20%;
+        width: 90%;
+    }
+    .home>.container2 h1 {
+        font-size: 20px;
+        letter-spacing: 1px;
+        color: #fff;
+    }
+    .home>.container2 p {
+        font-size: 15px;
+        margin-bottom: 10px;
+        color: #fff;
+    }
+}
+
