--- a/styles/index.css
+++ b/styles/index.css
@@ -75,7 +75,7 @@ select {
     content: "";
     background: rgba(0, 0, 0, 0.4);
     position: absolute;
-    height: 80vh;
+    height: 88vh;
     bottom: 0;
     top: 0;
     left: 0;
@@ -137,7 +137,7 @@ select {
     transition: all .3s ease-in-out;
 }
 
-.home>.container2 button:hover{
+.home>.container2 button:hover {
     color: black;
 }
 
@@ -161,16 +161,16 @@ select {
     flex-direction: column;
     justify-content: top;
     width: 100%;
-    background-color: #e0e0e0;
+    background-color: #fff;
 }
 
-    .row {
-        width: 70%;
-        margin-top:5%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+.row {
+    width: 70%;
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 
 
@@ -243,20 +243,66 @@ select {
 
 /** why_us section start*/
 
-.why_us{
+
+.why_us {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #FFF;
 }
 
-.whyus_container{
-    margin: 40px;
+.whyus_container {
+    width: 70%;
+    padding: 30px;
+    margin: 40px 0 40px 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+
+    border-radius: 12px;
+    background-color: #7f8fdb;
 }
 
+.whyus_container h3 {
+    margin-bottom: 30px;
+    color: #FFF;
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.whyus_container p {
+    margin-bottom: 30px;
+    color: #FFF;
+    font-size: 16px;
+    text-align: justify;
+    font-weight: 400;
+}
+
+.text-center {
+    width: 100%;
+    text-align: center;
+}
+
+.more-btn {
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.2);
+    padding: 6px 30px 8px 30px;
+    color: #fff;
+    font-size: 16px;
+
+    align-items: center;
+    border-radius: 50px;
+    transition: all ease-in-out 0.4s;
+}
+
+.more-btn i {
+    font-size: 11px;
+}
+
+.more-btn:hover {
+    color: #670fba;
+    background: #fff;
+}
 
 /** why_us section end*/
 
@@ -309,6 +355,12 @@ select {
 }
 
 
+/* ....................... */
+/* why us */
+/* ....................... */
+
+
+
 @media (max-width: 975px) {
     #hero {
         /* height: 00vh; */
@@ -322,28 +374,31 @@ select {
         overflow: hidden;
     }
 
-    .row{
+    .row {
         display: flex;
         justify-content: center;
         align-items: center;
         /* flex-direction: column; */
-        background-color: rgb(250, 242, 232);
+        background-color: #fff;
         width: 100%;
         height: 100%;
         margin-top: 0;
     }
 
-    .content_home{
+    .content_home {
         width: auto;
         padding: 10% 5% 10% 5%;
     }
+
     .mg2_container {
         width: 80%;
         margin: 10px;
     }
+
     .home {
         height: 70vh;
     }
+
     .home>.container2 h1 {
         font-size: 30px;
         letter-spacing: 2px;
@@ -364,21 +419,21 @@ select {
         z-index: -1;
         transition: all .3s ease-in-out;
     }
-    
-    .home>.container2 button:hover{
+
+    .home>.container2 button:hover {
         color: black;
     }
-    
+
     .home>.container2 button:hover>span.bg {
         transition: all .3s ease-in-out;
     }
-    
+
     .home>.container2 button.bottom>.bg {
         left: 0;
         bottom: 100%;
         transform: translateY(200%);
     }
-    
+
     .home>.container2 button.bottom:hover>.bg {
         transform: translateY(100%);
     }
@@ -387,27 +442,33 @@ select {
         font-size: 20px;
         padding-bottom: 5px;
     }
+
     .about .content_home ul li {
         font-size: 15px;
         /* color: #5fcf80; */
     }
+
+    .whyus_container{
+        width: 90%;
+        padding: 20px;
+    }
 }
 
-@media (max-width: 400px) 
-{
-    .home>.container2{
+@media (max-width: 400px) {
+    .home>.container2 {
         margin-top: 20%;
         width: 90%;
     }
+
     .home>.container2 h1 {
         font-size: 20px;
         letter-spacing: 1px;
         color: #fff;
     }
+
     .home>.container2 p {
         font-size: 15px;
         margin-bottom: 10px;
         color: #fff;
     }
 }
-
