--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -117,15 +117,20 @@
   width: 100px;
 }
 
-.scrolled {
+.scrolled_nav {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgb(221, 231, 235);
   z-index: 999999;
-  box-shadow: 0px 4px 10px rgb(205, 205, 205);
 }
 
+
+.scrolled_sidebar {
+  position: fixed;
+  top: 30px;
+  left: 0;
+  z-index: 999999;
+}
 /* ul li {
   margin-right: 50px;
 }
