--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -17,3 +17,46 @@
     border-top-right-radius: 20px;
     transition: all 0.5s;
 }
+
+.top_section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+}
+
+.link_section{
+    height: 40%;
+    margin-top: 20%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.link{
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+
+    cursor: pointer;
+    padding: 10px 20px 5px 15px;
+    margin-top: 10%;
+}
+
+.link_text{
+    padding-left: 15px;
+} 
+
+.logout_button{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    margin-top: 10px;
+    padding: 10px 20px 5px 15px;
+    cursor: pointer;
+}
