--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -64,6 +64,7 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 12px;
+
 }
 
 .card {
@@ -83,6 +84,11 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 15px;
+}
+
+.card p{
+    text-align: justify;
+    margin-top: 10px;
 }
 
 @media (max-width: 768px) {
