feat:working on dashboard

--- a/styles/global.css
+++ b/styles/global.css
@@ -9,7 +9,7 @@
 
 body {
   /* background: #1c8ef9 !important; */
-  background: #ffffff;
+  background: #f4f8fe;
   min-height: 100vh;
   width: auto;
   font-weight: 400;
