--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -5,42 +5,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* background-color: rgb(209, 209, 209); */
 }
 
-
-.header {
-    width: 80%;
-    /* height: 15%; */
-    background-image: linear-gradient(to right bottom, #5050503a, #3b3b3bcd), url("/background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top center;
-    color: #fff;
-    font-weight: 300;
-    padding: 25px;
-
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-
-
-    border-radius: 20px;
-}
-
-.header h1 {
-    color: azure;
-}
 
 
 .courses_section {
     width: 80%;
     margin: 30px;
-    padding: 10px;
+    padding: 20px;
 
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(112, 144, 176, 0.18) 14px 17px 40px 4px;
 }
 
 .courses_section span {
