--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -3,15 +3,12 @@
     height: 80vh;
     margin: 10px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     /* background-color: rgb(209, 209, 209); */
 }
 
 
-
 .courses_section {
-    width: 80%;
+    width: 100%;
     margin: 30px;
     padding: 20px;
 
@@ -20,17 +17,23 @@
     flex-direction: column;
     background-color: rgb(255, 255, 255);
     box-shadow: rgba(112, 144, 176, 0.18) 14px 17px 40px 4px;
+    border-radius: 20px;
 }
 
 .courses_section span {
     width: 100%;
     height: 20%;
-    margin-left: 30px;
+
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .courses_section hr {
     width: 60px;
     margin-top: 10px;
+    text-align: center;
 }
 
 .courses {
@@ -47,22 +50,27 @@
 }
 
 .card {
-    width: 30vh;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-
+    /* width: 30vh;
+    
     background-color: #fff;
-    padding: 30px;
     box-shadow: 0 0 5px rgba(75, 75, 75, 0.07);
-
+    
     background: rgba(255, 255, 255, 0.3);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    box-shadow: 0 5px 15px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
-    border-radius: 15px;
+    border-radius: 15px; */
+    
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 20px;
+    max-width: 26rem;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    border-radius: .8rem;
+    background-color: #fff;
 }
 
 .image{
@@ -74,8 +82,16 @@
     margin-top: 10px;
 }
 
+@media (max-width: 1650px){
+    .courses{
+        overflow-x: scroll;
+        padding-top: 5px;
+    }
+}
+
 @media (max-width: 768px) {
     .card {
         width: auto;
     }
+
 }
