--- a/partials/layout/sidebar.module.css
+++ b/partials/layout/sidebar.module.css
@@ -64,3 +64,9 @@
     padding: 10px 20px 5px 15px;
     cursor: pointer;
 }
+
+@media (max-width: 1230px){
+    .sidebar{
+        display: none;
+    }
+}
