--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,7 @@ body {
   font-weight: 400;
   font-family: "Fira Sans", sans-serif;
   overflow-x: hidden;
+  transition: all 0.5s ease;
 }
 
 h1,
