--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -11,8 +11,8 @@
 }
 
 .card {
-  width: 600px;
-  height: 400px;
+  width: 100%;
+  /* height: 400px; */
   /* overflow: hidden; */
   background: #fff;
   border-radius: 10px;
@@ -21,14 +21,20 @@
   flex-direction: column;
 }
 
-.card_image img{
+.card_image{
   width: 100%;
-  height: 160px;
+  height: 300px;
+  background-size: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  object-fit: cover;
 }
 
+.card_image img{
+  width: 100%;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
 
 .profile_image img{
   z-index: 1;
@@ -37,10 +43,10 @@
   position: relative;
   margin-top: -75px;
   display: block;
-  margin-left: auto;
+  margin-left: 60px;
   margin-right: auto;
   border-radius: 100px;
-  border: 10px solid #fff;
+  border: 5px solid #fff;
   transition-duration: 0.4s;
   transition-property: transform;
 }
@@ -50,24 +56,28 @@
 }
 
 .details {
-  width: 100%;
+  width: 60%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: column;
-  
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  padding: auto 70px auto 40px;
+  /* background-color: #0ABDE3; */
 }
 
 .card_content {
-  width: 70%;
-  
-  padding: 10px;
+  width: 50%;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 10px 30px;
 
 }
 
 .card_content h3{
   font-size: 25px;
-  text-align: center;
+  margin-left: 0;
   margin-bottom: 20px;
   padding-bottom: 5px;
 }
@@ -75,7 +85,7 @@
 .card_content p{
   font-size: 16px;
   text-align: justify;
-  padding: 0 20px 5px 20px;
+  padding: 0 10px 5px 5px;
 }
 
 .icons{
@@ -104,17 +114,35 @@
   padding: 15px;
   background: #fff;
   border-radius: 10px;
-  box-shadow: rgba(112, 144, 176, 0.18) 14px 17px 40px 4px;
 }
 
 .table{
+  width: 350px;
+  height: 130px;
+  text-align: center;
   border-collapse: collapse;
+  border-radius: 10px;
 }
 
+.table_header{
+  font-size: 25px;
+  margin-bottom: 10px;
+  color: #3f3f3f;
+}
 
-.table th td{
+.table td{
+  border: 1px solid rgb(170, 170, 170) !important;
   font-size: 14px;
   padding: 5px 10px;
   color: #000;
+  text-align: left !important;
+}
+
+.table th{
+  font-size: 14px;
+  padding: 5px 10px;
+  color: #444444;
+  text-align: left !important;
+  border: 1px solid rgb(170, 170, 170) !important;
 }
       
