feat<wip>:profile page is on cunstruction

--- a/partials/layout/nav.module.css
+++ b/partials/layout/nav.module.css
@@ -42,6 +42,7 @@
     .hamburger_menu {
         display: block;
     }
+
 }
 
 @media (max-width: 650px) {
@@ -52,4 +53,9 @@
     .header {
         margin: auto;
     }
+
+    .header input{
+        width: auto;
+    }
+    
 }
