--- a/partials/layout/sidebar.module.css
+++ b/partials/layout/sidebar.module.css
@@ -61,7 +61,7 @@
 }
 
 .link_section{
-    height: 40%;
+    /* height: 40%; */
     margin-top: 20%;
 
     display: flex;
@@ -80,7 +80,7 @@
 
     cursor: pointer;
     padding: 10px 20px 5px 15px;
-    margin-top: 10%;
+    margin-top: 9%;
 }
 
 .link_text{
@@ -96,7 +96,7 @@
     flex-direction: row;
     align-items: center;
 
-    margin-top: 10px;
+    margin-top: 30px;
     padding: 10px 20px 5px 15px;
     cursor: pointer;
 }
