--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -21,7 +21,7 @@
   flex-direction: column;
 }
 
-.card_image{
+.card_image {
   width: 100%;
   height: 300px;
   background-size: cover;
@@ -29,14 +29,29 @@
   border-top-right-radius: 10px;
 }
 
-.card_image img{
+.card_image img {
   width: 100%;
-
+  
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 
-.profile_image img{
+.edit_button{  
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  z-index: 1;
+  margin-top: -55px;
+  margin-left: 150px;
+
+
+  border: 2px solid white;
+  background-color: #0ABDE3;
+  border-radius: 50px;
+}
+
+.profile_image img {
   z-index: 1;
   width: 120px;
   height: 120px;
@@ -51,18 +66,18 @@
   transition-property: transform;
 }
 
-.profile_image img:hover{
+.profile_image img:hover {
   transform: scale(1.1);
 }
 
 .details {
-  width: 60%;
+  width: 80%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
   /* flex-wrap: wrap; */
-  padding: auto 70px auto 40px;
+  padding: 0 70px auto 40px;
   /* background-color: #0ABDE3; */
 }
 
@@ -71,30 +86,30 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  padding: 10px 30px;
+  padding: 0 30px;
 
 }
 
-.card_content h3{
+.card_content h3 {
   font-size: 25px;
   margin-left: 0;
   margin-bottom: 20px;
   padding-bottom: 5px;
 }
 
-.card_content p{
+.card_content p {
   font-size: 16px;
   text-align: justify;
   padding: 0 10px 5px 5px;
 }
 
-.icons{
+.icons {
   text-align: center;
   padding-top: 5px;
   padding-bottom: 30px;
 }
 
-.icons a{
+.icons a {
   text-decoration: none;
   font-size: 20px;
   color: #0ABDE3;
@@ -103,34 +118,34 @@
   transition-property: transform;
 }
 
-.icons a:hover{
+.icons a:hover {
   color: #000;
   transform: scale(1.5);
 }
 
-.general_info{
-  height: 200px;
-  width: 400px;
+.general_info {
+  height: 100%;
+  width: 100%;
   padding: 15px;
   background: #fff;
   border-radius: 10px;
 }
 
-.table{
-  width: 350px;
-  height: 130px;
+.table {
+  width: 100%;
+  height: 90%;
   text-align: center;
   border-collapse: collapse;
   border-radius: 10px;
 }
 
-.table_header{
+.table_header {
   font-size: 25px;
   margin-bottom: 10px;
   color: #3f3f3f;
 }
 
-.table td{
+.table td {
   border: 1px solid rgb(170, 170, 170) !important;
   font-size: 14px;
   padding: 5px 10px;
@@ -138,11 +153,43 @@
   text-align: left !important;
 }
 
-.table th{
-  font-size: 14px;
+.table th {
+  font-size: 30px;
   padding: 5px 10px;
   color: #444444;
   text-align: left !important;
   border: 1px solid rgb(170, 170, 170) !important;
 }
-      
+
+
+@media (max-width: 1062px) {
+  .details {
+    width: 90%;
+    /* flex-wrap: wrap; */
+  }
+}
+
+@media (max-width: 915px) {
+  .card_content {
+    padding-top: 10px;
+    width: 90%;
+  }
+  .general_info{
+    margin-top: 20px;
+  }
+
+
+  .table{
+    height: 50%;
+  }
+  .table th{
+    font-size: medium;
+  }
+}
+
+@media (max-width: 750px) {
+  .details {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+}
