--- a/styles/Contectcss.css
+++ b/styles/Contectcss.css
@@ -6,38 +6,18 @@ html {
 }
 
 .content {
-    padding: 7rem 0;
-}
-@media (min-width: 1200px){
-
-    .container {
-        /* max-width: 1140px; */
-    }
-}
-@media (min-width: 992px){
-
-    .container {
-        /* max-width: 960px; */
-    }
-}
-@media (min-width: 768px){
-
-    .container {
-        /* max-width: 720px; */
-    }
-}
-@media (min-width: 576px){
-
-    .container {
-        /* max-width: 540px; */
-    }
+    padding: 0 0 4rem 0;
 }
 .container {
     width: 100%;
+    /* height: auto; */
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .contact-wrap {
     -webkit-box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.2);
@@ -424,3 +404,22 @@ ul {
     padding-right: 15px;
     padding-left: 15px;
 }
+
+    /* @media (min-width: 992px){
+    
+        .container {
+            max-width: 960px;
+        }
+    }
+    @media (min-width: 768px){
+    
+        .container {
+            max-width: 720px;
+        }
+    }
+    @media (min-width: 576px){
+    
+        .container {
+            max-width: 540px;
+        }
+    } */
