--- a/styles/courses.module.css
+++ b/styles/courses.module.css
@@ -196,7 +196,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      z-index: 10;
+      z-index: 9999999999;
       padding: 20px;
       height: 100vh;
       width: 100%;
@@ -233,6 +233,7 @@
       width: fit-content;
       border-radius: 0 1rem 1rem 0;
       margin-top: 10px;
+      cursor: pointer;
     }
     .moblie_drawer_opener svg{
       margin: auto 4px;
