--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -39,14 +39,14 @@
 .courses {
     width: 100%;
     height: auto;
-
-    margin-top: 25px;
+    padding: 20px auto;
+    margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    overflow-x: scroll;
     gap: 12px;
-
 }
 
 .card {
@@ -62,28 +62,40 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 15px; */
-    
+
     display: flex;
     align-items: flex-start;
     flex-direction: column;
     padding: 20px;
-    max-width: 26rem;
+    width: 25rem;
+    height: 20rem;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     border-radius: .8rem;
     background-color: #fff;
 }
 
-.image{
-    width: auto;
+
+.button {
+    display: grid;
+    place-items: center;
+    margin-top: 10px;
+    width: 100%;
 }
 
-.card p{
+.image {
+    width: 19rem;
+    height: 120px;
+    margin: 10px auto;
+
+}
+
+.card p {
     text-align: justify;
     margin-top: 10px;
 }
 
-@media (max-width: 1650px){
-    .courses{
+@media (max-width: 1650px) {
+    .courses {
         overflow-x: scroll;
         padding-top: 5px;
     }
