--- a/styles/index.css
+++ b/styles/index.css
@@ -96,7 +96,7 @@ select {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     padding: 50px;
     color: #fff;
 }
@@ -235,6 +235,9 @@ select {
 }
 
 @media (max-width: 768px) {
+    main {
+        width: 100vw;
+    }
     .about .content_home .learn-more-btn {
         margin: 0 48px 0 0;
         padding: 6px 18px;
@@ -455,6 +458,10 @@ select {
 }
 
 @media (max-width: 400px) {
+    main {
+        width: 100vw;
+    }
+
     .home>.container2 {
         margin-top: 20%;
         width: 90%;
