--- a/styles/main.css
+++ b/styles/main.css
@@ -52,7 +52,7 @@ body,html{
     display: flex;
     align-items: center;
     font-size: 20px;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 10px;
 }
 .menu{
@@ -119,7 +119,7 @@ body,html{
     width: 55%;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     padding: 20px;
     color: #FFF;
     letter-spacing: 2px;
